--- a/src/components/App.css
+++ b/src/components/App.css
@@ -74,23 +74,36 @@ body {
   background-color: #32e0c4;
 }
 
+@media (max-width: 360px) {
+  .introduction-content h1 {
+    font-size: 30px;
+  }
+}
 
-@media (max-width: 480px) {
+@media (min-width: 361px) and (max-width: 480px) {
+  .introduction-content h1 {
+    font-size: 35px;
+  }
+}
+
+
+@media (max-width: 360px), (min-width: 361px) and (max-width: 480px) {
   .introduction-content {
     padding-top: 60%;
   }
   .introduction-content h1 {
-    font-size: 38px;
     margin-bottom: 5%;
   }
   .introduction-content p {
-    font-size: 18px;
     margin-bottom: 5%;
+    font-size: 17px;
   }
   .introduction-content button {
-    padding: 3% 6%;
+    padding: 2.5% 6%;
+    font-size: 16px;
   }
 }
+
 
 @media (min-width: 481px) and (max-width: 768px) {
   .introduction-content {
@@ -114,10 +127,13 @@ body {
     padding-top: 20%;
   }
   .introduction-content h1 {
-    font-size: 45px;
+    font-size: 40px;
   }
   .introduction-content p {
-    font-size: 20px;
+    font-size: 18px;
+  }
+  .introduction-content button {
+    font-size: 17px;
   }
 }
 
@@ -165,6 +181,7 @@ body {
 .focus p {
   text-align: left;
   font-size: 17px;
+  line-height: 1.7l
 }
 
 .focus .emphasis {
@@ -197,7 +214,7 @@ body {
     margin-bottom: 5%;
   }
   .frontend-skills {
-    margin-bottom: 8%;
+    margin-bottom: 6%;
   }
 }
 
@@ -363,16 +380,16 @@ body {
     margin-bottom: 6%;
   }
   #contact input, #contact textarea {
-    padding: 2% 8%;
-    width: 90%;
+    padding: 2% 9%;
+    width: 100%;
     margin-bottom: 2%;
   }
   #contact .fa-user, #contact .fa-envelope {
     top: 25%;
-    left: 7%;
+    left: 2%;
   }
   #contact .fa-pen-alt {
-    left: 7%;
+    left: 2%;
     top: 4%;
   }
   #contact button {
