--- a/src/components/filter-choice/FilterChoice.css
+++ b/src/components/filter-choice/FilterChoice.css
@@ -8,9 +8,19 @@
   font-weight: 600;
 }
 
-@media (max-width: 480px) {
+
+@media (max-width: 359px) {
+  .projects-filter span {
+    font-size: 16px;
+    margin: 0 3%;
+  }
+}
+
+
+@media (min-width: 360px) and (max-width: 480px) {
   .projects-filter span {
     margin: 0 4%;
+    font-size: 17px;
   }
 }
 
